<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/rect_white_3_radius_bg"
    android:layout_height="wrap_content"
    android:layout_marginEnd="?attr/dialogPreferredPadding"
    android:layout_marginStart="?attr/dialogPreferredPadding"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title_tv"
        android:layout_height="wrap_content"
        android:layout_marginEnd="?attr/dialogPreferredPadding"
        android:layout_marginStart="?attr/dialogPreferredPadding"
        android:layout_marginTop="17dp"
        android:layout_width="0dp"
        android:text="@string/iptv_source_dialog_title"
        android:textColor="@color/gray_900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/iptv_source_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/dialogPreferredPadding"
        android:layout_marginEnd="?attr/dialogPreferredPadding"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/iptv_source_item_layout"
        tools:itemCount="2"/>

    <Button
        android:id="@+id/cancel_bt"
        style="?attr/buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_link_dialog_cancel"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/iptv_source_rv"
        app:layout_constraintEnd_toStartOf="@id/ok_bt"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/ok_bt"
        style="?attr/buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_link_dialog_ok"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/iptv_source_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>