<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/handle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handle_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/file_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/media_info_dialog_file_title"
                android:textSize="14sp"
                android:textColor="@color/gray_900"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/file_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/file_title_tv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/audio_media_info_item_layout"
                tools:itemCount="3"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/file_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="file_title_tv,file_rv"/>

            <View
                android:id="@+id/video_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray_200"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/file_rv" />

            <TextView
                android:id="@+id/video_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/media_info_dialog_video_title"
                android:gravity="start"
                android:textSize="14sp"
                android:textColor="@color/gray_900"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_line"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/video_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_title_tv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/audio_media_info_item_layout"
                tools:itemCount="3"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/video_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="video_line,video_title_tv,video_rv"/>

            <View
                android:id="@+id/audio_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray_200"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_rv" />

            <TextView
                android:id="@+id/audio_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/media_info_dialog_audio_title"
                android:textSize="14sp"
                android:textColor="@color/gray_900"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_line"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/audio_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_title_tv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/audio_media_info_item_layout"
                tools:itemCount="3"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/audio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="audio_line,audio_rv,audio_title_tv"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>